// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for size: inherit and theme: dark 1`] = `
":host {
  position: relative;
  display: inline-block;
  vertical-align: top;
  outline: 0 !important;
  box-sizing: content-box !important;
}
:host([hidden]) {
  display: none !important;
}
a {
  display: block;
  text-decoration: none;
  height: inherit;
  outline: 0;
}
a::before {
  content: "";
  position: absolute;
  inset: 0;
  border-radius: 1px;
}
a:focus::before {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
a:focus:not(:focus-visible)::before {
  outline-color: transparent;
}
svg {
  display: block;
  height: inherit;
  fill: #FBFCFF;
}"
`;

exports[`getComponentCss() should return correct css for size: inherit and theme: light 1`] = `
":host {
  position: relative;
  display: inline-block;
  vertical-align: top;
  outline: 0 !important;
  box-sizing: content-box !important;
}
:host([hidden]) {
  display: none !important;
}
a {
  display: block;
  text-decoration: none;
  height: inherit;
  outline: 0;
}
a::before {
  content: "";
  position: absolute;
  inset: 0;
  border-radius: 1px;
}
a:focus::before {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
a:focus:not(:focus-visible)::before {
  outline-color: transparent;
}
svg {
  display: block;
  height: inherit;
  fill: #010205;
}"
`;

exports[`getComponentCss() should return correct css for size: small and theme: dark 1`] = `
":host {
  position: relative;
  display: inline-block;
  vertical-align: top;
  outline: 0 !important;
  box-sizing: content-box !important;
  height: clamp(0.63rem, 0.42vw + 0.5rem, 1rem) !important;
}
:host([hidden]) {
  display: none !important;
}
a {
  display: block;
  text-decoration: none;
  height: inherit;
  outline: 0;
}
a::before {
  content: "";
  position: absolute;
  inset: 0;
  border-radius: 1px;
}
a:focus::before {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
a:focus:not(:focus-visible)::before {
  outline-color: transparent;
}
svg {
  display: block;
  height: inherit;
  fill: #FBFCFF;
}"
`;

exports[`getComponentCss() should return correct css for size: small and theme: light 1`] = `
":host {
  position: relative;
  display: inline-block;
  vertical-align: top;
  outline: 0 !important;
  box-sizing: content-box !important;
  height: clamp(0.63rem, 0.42vw + 0.5rem, 1rem) !important;
}
:host([hidden]) {
  display: none !important;
}
a {
  display: block;
  text-decoration: none;
  height: inherit;
  outline: 0;
}
a::before {
  content: "";
  position: absolute;
  inset: 0;
  border-radius: 1px;
}
a:focus::before {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
a:focus:not(:focus-visible)::before {
  outline-color: transparent;
}
svg {
  display: block;
  height: inherit;
  fill: #010205;
}"
`;
